<resources>
    <string name="app_name">CakeShop Search</string>
    <string name="sincuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="hola">Bienvenido</string>
    <string name="miriam">Miriam</string>
    <string name="buscar">Buscar</string>
    <string name="pasteleria_amada">Amada JYM</string>
    <string name="las_palmeras">Las palmeras</string>
    <string name="tendencias">TENDENCIAS</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="cuenta">Cuenta</string>
    <string name="configuracion">Configuración</string>
    <string name="tortas_montero">Tortas Montero</string>
    <string name="las_delicias">Las delicias</string>
    <string name="dumb_text">Mostrar texto sobre pedidos relevantes o alguna cosa así</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>